--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
   border: 0;
   outline: 0;
   font-size: 100%;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
