--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  font-family: 'M PLUS Rounded 1c', sans-serif;	
 }
 h1, h2, h3, h4, h5{
 	font-weight: normal;
