--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ table {
 	voice
 ----------------------------------------- */
 #voice {
-	background-color: #FFF5DC;
+	background-color: #FFF5E1;
 }
 #voice.sec{
 	margin:0;
