--- a/css/style.css
+++ b/css/style.css
@@ -375,7 +375,7 @@ input[type="text"],input[type="email"],input[type="tel"]{
   font-size: 15px;
 }
 textarea{
-  border: solid 1px #aaa;
+  border:none;
   border-radius:5px;
   padding: 10px;
   height: 160px;
