--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ table {
 	font-size: .8rem;
 	font-weight: normal;
 	line-height: 1.5;
-  border: 1px solid #0a8c28;
+  border: 1px solid #28BE78;
 	text-align: center;
 	padding: 10px 4px;
 }
@@ -250,7 +250,7 @@ table {
 	padding: 10px;
 }
 .price_table .red {
-	color: #0a8c28;
+	color: #28BE78;
 }
 .price_table .t_small {
 	font-size: .6rem;
@@ -267,7 +267,7 @@ table {
 	font-size: .8rem;
 	font-weight: normal;
 	line-height: 1.5;
-  border: 1px solid #0a8c28;
+  border: 1px solid #28BE78;
 	text-align: center;
 	padding: 10px 4px;
 }
@@ -444,7 +444,7 @@ input[type="reset"]{
 ----------------------------------------- */
 .footer_fixed {
 	background: #FFF;
-	border-top: 2px solid #0a8c28;
+	border-top: 2px solid #28BE78;
 	padding: 5px 2px 5px 5px;
 	position: fixed;
 	bottom: 0;
