--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ table {
 ----------------------------------------- */
 .container {
 	margin-top: 60px;
-	margin-bottom: 60px;
+	margin-bottom: 50px;
 }
 .sec{
 	margin: 0 4% 35px;
@@ -348,7 +348,7 @@ table {
 ----------------------------------------- */
 #contactForm{
 	background-color: #EBEBEB;
-	margin: 0;
+	margin: 0px 0px 35px;
 	padding: 30px 4% 20px;
 }
 form{
