--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -30,7 +30,7 @@
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: #FA6E6E;
+  background-color: #28BE78;
   border-radius: 2px;
 }
 .menu-trigger span:nth-of-type(1) {
@@ -61,7 +61,7 @@ header{
   z-index: 999;
 }
 #gloval-nav {
-  background-image: linear-gradient( rgba(252, 67, 67, 0.59), rgba(252, 67, 67, 0.99));
+  background-image: linear-gradient( rgba(40, 190, 120, 0.59), rgba(40, 190, 120, 0.99));
   color: #fff;
   position: fixed;
   width: 100%;
@@ -98,7 +98,7 @@ header{
   display: inline;
   color: #fff;
   text-decoration: none;
-  padding: 10px 0px 10px 1rem;
+  padding: 16px 0px 16px 1rem;
   font-size: 1rem;
 }
 #gloval-nav ul {
