--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -55,7 +55,7 @@
 }
 /* inside that menu */
 header{
-  box-shadow:0px 2px 4px 1px #8c8c8c;
+  box-shadow:0px 2px 4px 1px #dcdcdc;
 }
 #gloval-nav nav {
   z-index: 999;
